# shardcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: rules.md
examples/: README.md  make_fixture.py  preflight.sh
scripts/: smoke.sh
src/shardcheck/: __init__.py  __main__.py  cli.py  errors.py  findings.py  indexfile.py  locate.py  report.py  rules.py  safetensors.py  validate.py
tests/: conftest.py  test_check_shard.py  test_cli.py  test_indexfile.py  test_locate.py  test_report.py  test_rules.py  test_safetensors.py  test_validate_index.py
