[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shardcheck"
version = "0.1.0"
description = "Validates sharded checkpoint indexes: missing, duplicated or overlapping tensors across safetensors shards."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["safetensors", "checkpoint", "sharding", "validation", "index", "preflight", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
shardcheck = "shardcheck.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/shardcheck"
Repository = "https://github.com/JaydenCJ/shardcheck"
Issues = "https://github.com/JaydenCJ/shardcheck/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
